# s7-tag-extractor-v10

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .pymarkdown  .sourcery.yaml  .yamllint.yaml  CHANGELOG.md  CLAUDE.md  README.md  justfile  pyproject.toml  taplo.toml
.claude/: settings.json
.claude/hooks/: block-push-to-main.sh
.github/: CODEOWNERS
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  release.yml  setup-check.yml
src/s7_tag_extractor_v10/: __init__.py  models.py
src/s7_tag_extractor_v10/exporters/: type_mapping.py
src/s7_tag_extractor_v10/parser/: arrays.py  blocks.py  project.py  symbols.py
tests/: test_array_expansion.py  test_blocks_parser.py  test_example.py  test_models.py  test_project_parser.py  test_symbols_parser.py  test_type_mapping.py
