[project]
name = "s7-tag-extractor-v10"
version = "0.1.0"
description = "Extract tags from Siemens Step 7 projects"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/s7_tag_extractor_v10"]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "N",    # pep8-naming
    "W",    # pycodestyle warnings
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
]
# Allow all rules to be auto-fixed
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
# Force single-line imports for clarity
force-single-line = false
# Combine as imports on same line
combine-as-imports = true
# Known first-party packages (placeholder replaced by agent-dispatch)
known-first-party = ["s7_tag_extractor_v10"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
